--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ducato App</title>
-  <base href="/" />
-  <link href="manifest.json" rel="manifest" />
-  <link href="css/app.css" rel="stylesheet" />
-  <meta name="theme-color" content="#ffffff" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ducato App</title>
+    <link rel="manifest" href="manifest.json" />
+    <base href="/" />
+    <link href="manifest.json" rel="manifest" />
+    <link href="css/app.css" rel="stylesheet" />
+    <meta name="theme-color" content="#ffffff" />
 </head>
 <body>
   <div id="app">Loading...</div>
